<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".fragments.AddRecipeFragment"
    android:background="@drawable/background_n">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/carter_one"
        android:gravity="center"
        android:text="@string/add_recipe"
        android:layout_marginTop="20dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="40sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="10dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_recipe_name"
                    android:id="@+id/recipe_name"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"/>
            </com.google.android.material.textfield.TextInputLayout>

            <Spinner
                android:id="@+id/category_select"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_preparation_time"
                    android:id="@+id/prep_time_input"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_ingredients"
                    android:id="@+id/ingredients_input"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_directions"
                    android:id="@+id/directions_input"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"/>
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/pick_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:backgroundTint="#208381"
                android:text="@string/pick_image" />

            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:src="@drawable/baseline_image_24"
                android:id="@+id/image_food"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add"
                android:textColor="@color/black"
                android:backgroundTint="@color/white"
                android:id="@+id/add_btn"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>