<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/background_n">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/background_n">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/carter_one"
            android:gravity="center"
            android:text="@string/edit_recipe"
            android:layout_marginTop="20dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="45sp" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="10dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/recipe_name"
                        android:id="@+id/edit_recipe_name"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prep_time"
                        android:id="@+id/edit_prep_time_input"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/ingredients"
                        android:id="@+id/edit_ingredients_input"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/directions"
                        android:id="@+id/edit_directions_input"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black"/>
                </com.google.android.material.textfield.TextInputLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/update"
                        android:textSize="18sp"
                        android:backgroundTint="@color/white"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:id="@+id/update_btn"
                        android:layout_marginTop="10dp"
                        android:layout_gravity="center"/>

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"/>

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/cancel"
                        android:layout_marginTop="10dp"
                        android:id="@+id/cancel_button"
                        android:layout_gravity="center"
                        android:textSize="18sp"
                        android:textColor="@color/black"
                        android:backgroundTint="#F0A69E9E"
                        android:textStyle="bold"/>

                </LinearLayout>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="15dp"/>

            </LinearLayout>
        </ScrollView>

    </LinearLayout>
</androidx.cardview.widget.CardView>