<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    tools:context=".fragments.OpeningScreenFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/kaushan_script"
            android:text="@string/recipes_manager"
            android:textSize="50sp"
            android:textStyle="bold"
            android:textColor="#3279AD"
            android:gravity="center"
            android:layout_marginTop="30dp"
            android:id="@+id/title_app"/>

        <ImageView
            android:layout_width="230dp"
            android:layout_height="230dp"
            android:src="@drawable/recipebook"
            android:layout_gravity="center|bottom"
            android:layout_marginTop="25dp"
            android:id="@+id/icon_app"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="bottom">


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/arc2"
                android:scaleType="center"
                android:layout_gravity="bottom"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:background="#A0D4D3"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:id="@+id/sentence"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/amethysta"
                    android:gravity="center"
                    android:text="@string/sentence"
                    android:textSize="30sp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:layout_marginTop="25dp"/>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:gravity="bottom"
                    android:layout_marginBottom="10dp">
                    <Button
                        android:id="@+id/login_button"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:backgroundTint="#9ED2D1"
                        android:text="@string/login"
                        android:textStyle="bold"
                        android:textColor="#FFFFFF"
                        android:textSize="25sp"/>

                    <Button
                        android:id="@+id/sign_up_button"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:backgroundTint="#9ED2D1"
                        android:text="@string/sign_up"
                        android:textStyle="bold"
                        android:textColor="#FFFFFF"
                        android:textSize="25sp"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>