<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".fragments.LoginFragment"
    android:background="@drawable/backgroun_login">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="10dp">

            <TextView
                android:id="@+id/textViewLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:fontFamily="@font/averia_serif_libre_bold"
                android:gravity="center"
                android:text="@string/login"
                android:textSize="60sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_weight="1"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_email"
                    android:id="@+id/usernameLogin"
                    android:textSize="24sp"
                    android:drawableLeft="@drawable/baseline_person_24"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_password"
                    android:inputType="textPassword"
                    android:id="@+id/passwordLogin"
                    android:drawableLeft="@drawable/baseline_lock_person_24"
                    android:textSize="24sp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"/>
            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/loginButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="20dp"
                android:onClick="loginFunc"
                android:text="@string/login"
                android:textSize="24sp"
                android:backgroundTint="#50B2B0"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>